be/src/common/global-flags.cc
@@ -109,3 +109,9 @@ DEFINE_int32(fault_injection_rpc_type, 0, "A fault injection option that specifi
 #endif
 
 DEFINE_bool(disable_kudu, false, "If true, Kudu features will be disabled.");
+
+DEFINE_bool(enable_accept_queue_server, true,
+    "If true, uses a modified version of "
+    "TThreadedServer that accepts connections as quickly as possible and hands them off "
+    "to a thread pool to finish setup, reducing the chances that connections time out "
+    "waiting to be accepted.");
